fixed the non-profit cards spacing

--- a/src/assets/css/tin-cup-custom.css
+++ b/src/assets/css/tin-cup-custom.css
@@ -1796,11 +1796,11 @@ a:hover {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    padding: 20px;
+    padding: 5px 15px 15px;
 }
 
 .causes-one__title {
-    min-height: 56px;
+    min-height: 44px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -1808,7 +1808,7 @@ a:hover {
     line-height: 1.4;
     font-size: 18px;
     font-weight: 700;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .causes-one__title a {
@@ -1819,7 +1819,7 @@ a:hover {
 }
 
 .causes-one__text {
-    min-height: 66px;
+    min-height: 60px;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
@@ -1839,12 +1839,13 @@ a:hover {
     display: inline-block;
     padding: 5px 14px;
     border-radius: 20px;
-    margin-bottom: 12px;
+    margin-bottom: 3px;
+    align-self: flex-end; /* Right align the tag */
 }
 
 .causes-one__cat p {
     margin: 0;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 600;
     text-transform: none;
     letter-spacing: 0;
